# SC-Claim

./: .gitignore  Cargo.toml  README.md  deploy-testnet.interaction.json  mxpy.data-storage.json
interactions/: mainet.snippets.sh
mandos/: claim.scen.json  claim2.scen.json  fund.scen.json  scinit.scen.json  start.scen.json
meta/: Cargo.toml
meta/src/: main.rs
src/: claim.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
