[package]
name = "claim-wasm"
version = "0.0.1"
authors = [ "Dancu Sebastian",]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.claim]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.34.1"

[dependencies.elrond-wasm-output]
version = "0.34.1"
features = ["wasm-output-mode"]
